changed version to 1.1-dev + use variable 'plugin.name' in ANT script to facilitate reuse

--- a/build.properties
+++ b/build.properties
@@ -1,3 +1,4 @@
-gate.home=/data/gate
-version=1.0
+gate.home=/data/gate-svn
+version=1.1-dev
 dist.dir=distrib
+plugin.name=TextClassificationPlugin
