GATE compile dependencies managed by IVY, having GATE preinstalled is not a requirement anymore

--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,9 @@
-gate.home=/data/gate-svn
 version=1.1-dev
-dist.dir=distrib
+organisation=com.digitalpebble
 plugin.name=TextClassificationPlugin
+dist.dir=distrib
+build.dir=build
+lib.dir=lib
+compile.lib.dir=compile.lib
+ivy.file=ivy.xml
+
