--- a/ivy.xml
+++ b/ivy.xml
@@ -3,6 +3,7 @@
 <ivy-module version="2.0">
 	<info organisation="${organisation}" module="${pluginName}" />
 	<dependencies defaultconf="*->*,!sources,!javadoc">
-	 <dependency org="uk.ac.gate" name="gate-core" rev="7.0"/>
-    </dependencies>
+		<dependency org="uk.ac.gate" name="gate-core" rev="7.0" />
+		<dependency org="org.apache.hadoop" name="hadoop-core" rev="1.0.2" />
+	</dependencies>
 </ivy-module>
